--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - "2222:222"
     expose:
       - "3000"
-      - "8080"
+      - "8081"
       - "4443"
       - "2222"
       - "80"
@@ -77,7 +77,9 @@ services:
     # image: mongo:3.2
     image: mongo:latest
     container_name: 'mongo-init-replica'
-    command: 'mongo mongo/rocketchat --eval "rs.initiate({ _id: ''rs0'', members: [ { _id: 0, host: ''localhost:27017'' } ]})"'
+    # - il FAUDRA remplacer ce sleep par une meilleure solution
+    # command: 'mongo mongo/rocketchat --eval "rs.initiate({ _id: ''rs0'', members: [ { _id: 0, host: ''localhost:27017'' } ]})"'
+    command: 'mongo mongo/rocketchat --eval "rs.initiate({ _id: ''rs0'', members: [ { _id: 0, host: ''mongo:27017'' } ]})"'
 #     links:
 #       - mongo:mongo
     networks:
@@ -86,7 +88,7 @@ services:
 #       - 27017
     depends_on:
       - mongo
-
+#     restart: always
   rocketchat:
     image: rocketchat/rocket.chat:latest
 #     hostname: 'rocketchat'
@@ -95,9 +97,9 @@ services:
       - ./rocketchat/uploads:/app/uploads
     environment:
       - PORT=3000
-      - ROOT_URL=http://rocketchat:3000
+      - ROOT_URL=http://rocketchat.marguerite.io:3000
       - MONGO_URL=mongodb://mongo:27017/rocketchat
-      - MONGO_OPLOG_URL=mongodb://mongo:27017/local
+      - MONGO_OPLOG_URL=mongodb://mongo:27017/local?replicaSet=rs0
       - MAIL_URL="smtp://smtp.google.com"
 #     links:
 #       - mongo:mongo
@@ -126,7 +128,7 @@ services:
       - ROCKETCHAT_AUTH=password
       - BOT_NAME=Rocket.Cat
       - LISTEN_ON_ALL_PUBLIC=true
-      - GITLAB_URL=http://marguerite_gitlab/api/v3/
+      - GITLAB_URL=http://marguerite_gitlab:8081/api/v3/
       - EXTERNAL_SCRIPTS=hubot-help,hubot-seen,hubot-links,hubot-diagnostics,hubot-rocketchat-gitlab
       - GITLAB_API_KEY="cNhsExCcNhsExicNhsExx"
       - GITLAB_TOKEN=cNhsExCcNhsExicNhsExx
@@ -206,4 +208,3 @@ networks:
 #         - subnet: 192.168.160.0/24
 #         - gateway: 192.168.160.1
 #         # - gateway: 172.16.1.1
-
