--- a/mongodb/construction/Dockerfile
+++ b/mongodb/construction/Dockerfile
@@ -5,5 +5,14 @@ FROM mongo:latest
 # La commande [echo 'db.runCommand("ping").ok' | mongo localhost:27017/test --quiet], doit envoyer sur la sortie standard, la valeur '1'.
 # - > Il faudra à l'avenir utilsier ce healthcheck, plus fin que celui ci-dessous : 
 EXPOSE 27017
-HEALTHCHECK CMD curl --fail http://localhost:27017 || exit 1
+
+USER 1001
+
+COPY docker-healthcheck /usr/local/bin/
+RUN chmod +x /usr/local/bin/docker-healthcheck
+HEALTHCHECK CMD ["docker-healthcheck"]
+
+ENTRYPOINT [ "/app-entrypoint.sh" ]
+CMD [ "/run.sh" ]
+
 
