--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
 #     hostname: "gitlab"
     environment:
       GITLAB_OMNIBUS_CONFIG: |
-        external_url 'http://gitlab.marguerite.io/'
+        external_url 'http://gitlab.marguerite.io:8090/'
         gitlab_rails['gitlab_shell_ssh_port'] = 222
         gitlab_rails['lfs_enabled'] = true
         nginx['listen_port'] = 8081
