--- a/mongo-init-replica/construction/Dockerfile
+++ b/mongo-init-replica/construction/Dockerfile
@@ -1,3 +1,7 @@
 FROM mongo:latest
-
-HEALTH_CHECK --retry 3 --interval 1 CMD replicaset-health-check
+ADD replicaset-health-check .
+RUN chmod +x ./replicaset-health-check
+ADD create-replicaset .
+RUN chmod +x ./create-replicaset
+HEALTH_CHECK --retry 3 --interval 1 CMD ./replicaset-health-check
+CMD ["./create-replicaset"]
