--- a/rocketchat/construction/Dockerfile
+++ b/rocketchat/construction/Dockerfile
@@ -1,5 +1,26 @@
 FROM rocketchat/rocket.chat:latest
 
+# - HEALTHCHECK ENVIRONMENT => HEALTHCHECK SERVICE IS THERFORE BUILT IN THE IMAGE AS WELL, IN THIS MODEL :
+#   so what if we consider that a dependency, that HAS to be resolved as such?
+#   Okay, I we think like that, then this HEALTHCHECK, as an app, is a dependency to who?
+#    It is not a ROcketChat Dependency.
+#    It is not A hubot dependency
+#    Neither is it a dependency of the HUBOT developed by RocketChat Team, used in this recipe, to connect gitlab to RocketChat.
+#    So, to me, this HEALTHCHECK is an infrastructure dependency. It's like a RAID controller driver, to a Linux installed on a server.
+#    The it has to be resolved when building his infrastructure, i.e., when building a Docker Image, for example.
+#    And ther I end up setting up a Jenkins Pipeline, to build an app, to build an infrastructure, that will receive other apps.
+
+# And....
+# There you go.
+ARG UTILISATEUR_ROCKETCHAT_HUBOT
+ENV UTILISATEUR_ROCKETCHAT_HUBOT=$UTILISATEUR_ROCKETCHAT_HUBOT
+
+ARG UTILISATEUR_ROCKETCHAT_HUBOT_MDP
+ENV UTILISATEUR_ROCKETCHAT_HUBOT_MDP=$UTILISATEUR_ROCKETCHAT_HUBOT_MDP
+
+ARG CHATROOM_ROCKETCHAT_HUBOT
+ENV CHATROOM_ROCKETCHAT_HUBOT=$CHATROOM_ROCKETCHAT_HUBOT
+
 # RUN apt-get update -y && apt-get install -y curl
 
 ADD avail-to-hubot-healthcheck .
