derniers ajustement mongo: est bientôt un plongeur à part entière, réparation healthcheck

--- a/mongodb/construction/Dockerfile
+++ b/mongodb/construction/Dockerfile
@@ -9,7 +9,7 @@ EXPOSE 27017
 # USER 1001
 
 COPY mongo-healthcheck /usr/local/bin/
-COPY replicaset-healthcheck /usr/local/bin/
+COPY replicaset-health-check /usr/local/bin/
 
 # - -------------------------------------------------------------
 # - Rendu exécutable par operations.sh à la place, ou devrait 
@@ -17,7 +17,7 @@ COPY replicaset-healthcheck /usr/local/bin/
 # - -------------------------------------------------------------
 # RUN chmod +x /usr/local/bin/mongo-healthcheck
 # - -------------------------------------------------------------
-HEALTHCHECK CMD ./mongo-healthcheck && ./replicaset-healthcheck
+HEALTHCHECK CMD ./mongo-healthcheck && ./replicaset-health-check
 
 # ENTRYPOINT [ "/app-entrypoint.sh" ]
 # CMD [ "/run.sh" ]
