--- a/mongodb/construction/Dockerfile
+++ b/mongodb/construction/Dockerfile
@@ -8,7 +8,7 @@ EXPOSE 27017
 
 # USER 1001
 
-COPY mongo-healthcheck /usr/local/bin/
+# COPY mongo-healthcheck /usr/local/bin/
 COPY replicaset-health-check /usr/local/bin/
 
 # - -------------------------------------------------------------
@@ -17,7 +17,7 @@ COPY replicaset-health-check /usr/local/bin/
 # - -------------------------------------------------------------
 # RUN chmod +x /usr/local/bin/mongo-healthcheck
 # - -------------------------------------------------------------
-HEALTHCHECK CMD (./mongo-healthcheck || exit 1) && (./replicaset-health-check || exit 1)
+HEALTHCHECK CMD ./replicaset-health-check || exit 1
 
 # ENTRYPOINT [ "/app-entrypoint.sh" ]
 # CMD [ "/run.sh" ]
