--- a/rocketchat/construction/Dockerfile
+++ b/rocketchat/construction/Dockerfile
@@ -23,8 +23,14 @@ ENV CHATROOM_ROCKETCHAT_HUBOT=$CHATROOM_ROCKETCHAT_HUBOT
 
 # RUN apt-get update -y && apt-get install -y curl
 
-ADD avail-to-hubot-healthcheck .
-ADD healthcheck .
+ADD ./avail-to-hubot-healthcheck .
+ADD ./healthcheck .
+
+USER root
+
+RUN chmod +x ./avail-to-hubot-healthcheck .
+RUN chmod +x ./healthcheck .
+
 # toutes les 5 minutes, le daemon DOcker invoquera le HEALTHCHECK, pour actualiser le statutu du conteneur
 # HEALTHCHECK --interval=5s --timeout=3s   CMD curl -f http://localhost:3000/ || exit 1
 HEALTHCHECK --interval=1s --timeout=3s CMD avail-to-hubot-healthcheck && healthcheck
