--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,7 +109,7 @@ services:
     build: 
       context: ./rocketchat/construction/
       args:
-        # - HEALTHCHECK ENV. => devrait être dans un conteneur Père, dont celui ci hérite, avec les BUILD ARGS déjà fixés.
+        # - HEALTHCHECK BUILD ENV. => devrait être dans un conteneur Père, dont celui ci hérite, avec les BUILD ARGS déjà fixés.
         # Les variables globales de nom identique, sont définies dans le fichier ".env", propre à Docker Compose
         - UTILISATEUR_ROCKETCHAT_HUBOT="$UTILISATEUR_ROCKETCHAT_HUBOT"
         - UTILISATEUR_ROCKETCHAT_HUBOT_MDP="$UTILISATEUR_ROCKETCHAT_HUBOT_MDP"
@@ -142,10 +142,20 @@ services:
 
   # le soudeur qui créée user et chatroom rocketchat, pour le HUBOT
   hubot-init-rocketchat:
+    container_name: 'hubot-rocketchat-initializer'
     # image: mongo:3.2
     image: marguerite/hubot-rocketchat-initializer:1.0.0
     build: ./hubot-init-rocketcha/construction/
-    container_name: 'hubot-rocketchat-initializer'
+      args:
+        # - BUILD ENV. => devrait être dans un conteneur Père, dont celui ci hérite, avec les BUILD ARGS déjà fixés.
+        # Les variables globales de nom identique, sont définies dans le fichier ".env", propre à Docker Compose
+        - UTILISATEUR_ROCKETCHAT_HUBOT="$UTILISATEUR_ROCKETCHAT_HUBOT"
+        - UTILISATEUR_ROCKETCHAT_HUBOT_MDP="$UTILISATEUR_ROCKETCHAT_HUBOT_MDP"
+        - CHATROOM_ROCKETCHAT_HUBOT="$CHATROOM_ROCKETCHAT_HUBOT"
+    environment:
+      - UTILISATEUR_ROCKETCHAT_HUBOT="$UTILISATEUR_ROCKETCHAT_HUBOT"
+      - UTILISATEUR_ROCKETCHAT_HUBOT_MDP="$UTILISATEUR_ROCKETCHAT_HUBOT_MDP"
+      - CHATROOM_ROCKETCHAT_HUBOT="$CHATROOM_ROCKETCHAT_HUBOT"
     networks:
       - devops
     depends_on:
