--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -124,6 +124,9 @@ services:
       - MONGO_URL=mongodb://mongo:27017/rocketchat
       - MONGO_OPLOG_URL=mongodb://mongo:27017/local?replicaSet=rs0
       - MAIL_URL="smtp://smtp.google.com"
+      - ADMIN_USERNAME="$USERNAME_UTILISATEUR_ADMIN_INITIAL" 
+      - ADMIN_PASS="$MDP_UTILISATEUR_ADMIN_INITIAL" 
+      - ADMIN_EMAIL="$EMAIL_UTILISATEUR_ADMIN_INITIAL" 
     ports:
       - 3000:3000
     expose:
