--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 UTILISATEUR_ROCKETCHAT_HUBOT=jbl
 UTILISATEUR_ROCKETCHAT_HUBOT_MDP=jbl
 CHATROOM_ROCKETCHAT_HUBOT=receptionyooma
+USERNAME_UTILISATEUR_ADMIN_INITIAL=admin
+MDP_UTILISATEUR_ADMIN_INITIAL=supersecret
+EMAIL_UTILISATEUR_ADMIN_INITIAL=jbl@jbl.io
