--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 UTILISATEUR_ROCKETCHAT_HUBOT=jbl
 UTILISATEUR_ROCKETCHAT_HUBOT_MDP=jbl
 CHATROOM_ROCKETCHAT_HUBOT=receptionyooma
-USERNAME_UTILISATEUR_ADMIN_INITIAL=admin
-MDP_UTILISATEUR_ADMIN_INITIAL=supersecret
+# L'utilisateur initial, n'est plus l'utiliateur RocketChat que HUBOT utilise: il créée l'utilisateur utilisé par HUBOT
+USERNAME_UTILISATEUR_ADMIN_INITIAL=jb
+MDP_UTILISATEUR_ADMIN_INITIAL=jbl
 EMAIL_UTILISATEUR_ADMIN_INITIAL=jbl@jbl.io
