--- a/hubot-init-rocketcha/construction/Dockerfile
+++ b/hubot-init-rocketcha/construction/Dockerfile
@@ -1,8 +1,13 @@
 FROM centos:7
 
-ARG VERSION_ROCKET_CHAT
-ENV VERSION_ROCKET_CHAT
+# + le user RocketChat Admin, qui sera utilisé pour créer le user "$UTILISATEUR_ROCKETCHAT_HUBOT" et "$CHATROOM_ROCKETCHAT_HUBOT"
+ARG USERNAME_UTILISATEUR_ADMIN_INITIAL=$USERNAME_UTILISATEUR_ADMIN_INITIAL
+ENV USERNAME_UTILISATEUR_ADMIN_INITIAL=$USERNAME_UTILISATEUR_ADMIN_INITIAL
 
+ARG MDP_UTILISATEUR_ADMIN_INITIAL=$MDP_UTILISATEUR_ADMIN_INITIAL
+ENV MDP_UTILISATEUR_ADMIN_INITIAL=$MDP_UTILISATEUR_ADMIN_INITIAL
+
+# + le user RocketChat, qui sera utilisé pa rle HUBOT, pour s'exprimer sur RocketChat, dans la chatroom "$CHATROOM_ROCKETCHAT_HUBOT"
 ARG UTILISATEUR_ROCKETCHAT_HUBOT=jbl
 ENV UTILISATEUR_ROCKETCHAT_HUBOT=jbl
 
