--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ CHATROOM_ROCKETCHAT_HUBOT=receptionyooma
 USERNAME_UTILISATEUR_ADMIN_INITIAL=jb
 MDP_UTILISATEUR_ADMIN_INITIAL=jbl
 EMAIL_UTILISATEUR_ADMIN_INITIAL=jbl@jbl.io
+NUMERO_PORT_ECOUTE_REVERSE_PROXY=8090
+NOM_CONTENEUR_ROCKETCHAT=rocketchat
+NUMERO_PORT_ECOUTE_ROCKETCHAT=3000
+ADRESSE_IP_HOTE_DOCKER=192.168.1.29
