--- a/.env
+++ b/.env
@@ -7,5 +7,6 @@ MDP_UTILISATEUR_ADMIN_INITIAL=jbl
 EMAIL_UTILISATEUR_ADMIN_INITIAL=jbl@jbl.io
 NUMERO_PORT_ECOUTE_REVERSE_PROXY=8090
 NOM_CONTENEUR_ROCKETCHAT=rocketchat
+NOM_CONTENEUR_GITLAB=marguerite_gitlab_service
 NUMERO_PORT_ECOUTE_ROCKETCHAT=3000
 ADRESSE_IP_HOTE_DOCKER=192.168.1.29
