--- a/rocketchat/construction/Dockerfile
+++ b/rocketchat/construction/Dockerfile
@@ -26,10 +26,10 @@ ENV CHATROOM_ROCKETCHAT_HUBOT=$CHATROOM_ROCKETCHAT_HUBOT
 ADD ./avail-to-hubot-healthcheck .
 ADD ./healthcheck .
 
-USER root
+# USER root
 
-RUN chmod +x ./avail-to-hubot-healthcheck .
-RUN chmod +x ./healthcheck .
+# RUN chmod +x ./avail-to-hubot-healthcheck .
+# RUN chmod +x ./healthcheck .
 
 # toutes les 5 minutes, le daemon DOcker invoquera le HEALTHCHECK, pour actualiser le statutu du conteneur
 # HEALTHCHECK --interval=5s --timeout=3s   CMD curl -f http://localhost:3000/ || exit 1
