--- a/.env
+++ b/.env
@@ -10,3 +10,13 @@ NOM_CONTENEUR_ROCKETCHAT=rocketchat
 NOM_CONTENEUR_GITLAB=marguerite_gitlab_service
 NUMERO_PORT_ECOUTE_ROCKETCHAT=3000
 ADRESSE_IP_HOTE_DOCKER=192.168.1.29
+
+# + 
+
+VERSION_IMAGE_CENTOS=centos:7
+VERSION_IMAGE_MONGO=mongo:latest
+VERSION_IMAGE_GITLAB_CE=gitlab/gitlab-ce:latest
+VERSION_IMAGE_GITLAB_RUNNER=gitlab/gitlab-runner:latest
+VERSION_IMAGE_ROCKETCHAT=rocketchat/rocket.chat:latest
+VERSION_IMAGE_HUBOT_ROCKETCHAT=rocketchat/hubot-rocketchat:latest
+VERSION_IMAGE_RNGINX=nginx:latest
