--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -193,7 +193,7 @@ services:
       - LISTEN_ON_ALL_PUBLIC=true
       - GITLAB_URL="http://$NOM_CONTENEUR_GITLAB:8081/api/v3/"
       # + la "apiKey" Gitlab, qui doit être utilisée parle hubot, pour accéder à un compte Gitlab (et remonter des évènements tels que les pull request, comment on commit, etc...) 
-      - GITLAB_API_KEY="jdf563lv6jT6416DGTF566HEDthbgdbdgfd65gf69"
+      - GITLAB_API_KEY="$HUBOT_GITLAB_API_KEY"
       #
       # + EXTERNAL_SCRIPTS=hubot-help,hubot-seen,hubot-links,hubot-diagnostics,hubot-rocketchat-gitlab
       # + EXTERNAL_SCRIPTS=hubot-pugme,hubot-help,hubot-seen,hubot-links,hubot-diagnostics,hubot-rocketchat-gitlab
