--- a/hubot-init-rocketcha/construction/Dockerfile
+++ b/hubot-init-rocketcha/construction/Dockerfile
@@ -14,8 +14,52 @@ ENV UTILISATEUR_ROCKETCHAT_HUBOT=jbl
 ARG UTILISATEUR_ROCKETCHAT_HUBOT_MDP=jbl
 ENV UTILISATEUR_ROCKETCHAT_HUBOT_MDP=jbl
 
+ARG UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL=jbl@jbl.io
+ENV=UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL=$UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL
+
 ARG CHATROOM_ROCKETCHAT_HUBOT=receptionyooma
 ENV CHATROOM_ROCKETCHAT_HUBOT=receptionyooma
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 RUN yum update -y && yum install -y vim curl iputils
 
