--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -159,6 +159,7 @@ services:
         # Les variables globales de nom identique, sont définies dans le fichier ".env", propre à Docker Compose
         - UTILISATEUR_ROCKETCHAT_HUBOT="$UTILISATEUR_ROCKETCHAT_HUBOT"
         - UTILISATEUR_ROCKETCHAT_HUBOT_MDP="$UTILISATEUR_ROCKETCHAT_HUBOT_MDP"
+        - UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL="$UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL"
         - CHATROOM_ROCKETCHAT_HUBOT="$CHATROOM_ROCKETCHAT_HUBOT"
     environment:
       # + le user RocketChat Admin, qui sera utilisé pour créer le user "$UTILISATEUR_ROCKETCHAT_HUBOT" et "$CHATROOM_ROCKETCHAT_HUBOT"
@@ -167,7 +168,10 @@ services:
       # ++ Le soudeur créée l'utilisateur "$UTILISATEUR_ROCKETCHAT_HUBOT" , en utilisant l'utilisateur initial
       - UTILISATEUR_ROCKETCHAT_HUBOT="$UTILISATEUR_ROCKETCHAT_HUBOT"
       - UTILISATEUR_ROCKETCHAT_HUBOT_MDP="$UTILISATEUR_ROCKETCHAT_HUBOT_MDP"
+      - UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL="$UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL"
       - CHATROOM_ROCKETCHAT_HUBOT="$CHATROOM_ROCKETCHAT_HUBOT"
+      - NOM_DOMAINE_DOCKER_ROCKETCHAT="$NOM_CONTENEUR_ROCKETCHAT"
+
     networks:
       - devops
     depends_on:
