--- a/hubot-init-rocketcha/construction/Dockerfile
+++ b/hubot-init-rocketcha/construction/Dockerfile
@@ -15,12 +15,13 @@ ARG UTILISATEUR_ROCKETCHAT_HUBOT_MDP=jbl
 ENV UTILISATEUR_ROCKETCHAT_HUBOT_MDP=jbl
 
 ARG UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL=jbl@jbl.io
-ENV=UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL=$UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL
+ENV UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL=$UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL
 
 ARG CHATROOM_ROCKETCHAT_HUBOT=receptionyooma
 ENV CHATROOM_ROCKETCHAT_HUBOT=receptionyooma
 
-
+ARG NOM_DOMAINE_DOCKER_ROCKETCHAT=rocketchat
+ENV NOM_DOMAINE_DOCKER_ROCKETCHAT=$NOM_DOMAINE_DOCKER_ROCKETCHAT
 
 
 
