--- a/hubot-init-rocketcha/construction/Dockerfile
+++ b/hubot-init-rocketcha/construction/Dockerfile
@@ -23,7 +23,9 @@ ENV CHATROOM_ROCKETCHAT_HUBOT=receptionyooma
 ARG NOM_DOMAINE_DOCKER_ROCKETCHAT=rocketchat
 ENV NOM_DOMAINE_DOCKER_ROCKETCHAT=$NOM_DOMAINE_DOCKER_ROCKETCHAT
 
-
+# - Comme toutes les applications développées avec le framwork Meteor, par défaut, le port d'écoute est le port 3000.
+ARG NUMERO_PORT_ECOUTE_ROCKETCHAT=3000
+ENV NUMERO_PORT_ECOUTE_ROCKETCHAT=$NUMERO_PORT_ECOUTE_ROCKETCHAT
 
 
 
