--- a/.env
+++ b/.env
@@ -8,12 +8,12 @@ EMAIL_UTILISATEUR_ADMIN_INITIAL=jbl@jbl.io
 NUMERO_PORT_ECOUTE_REVERSE_PROXY=8090
 NOM_CONTENEUR_ROCKETCHAT=rocketchat
 NOM_CONTENEUR_GITLAB=marguerite_gitlab_service
+# - Comme toutes les applications développées avec le framwork Meteor, par défaut, le port d'écoute est le port 3000.
 NUMERO_PORT_ECOUTE_ROCKETCHAT=3000
 ADRESSE_IP_HOTE_DOCKER=192.168.1.29
 # + la "apiKey" Gitlab, qui doit être utilisée parle hubot, pour accéder à un compte Gitlab (et remonter des évènements tels que les pull request, comment on commit, etc...) 
 HUBOT_GITLAB_API_KEY="jdf563lv6jT6416DGTF566HEDthbgdbdgfd65gf69"
 # + 
-
 VERSION_IMAGE_CENTOS=centos:7
 VERSION_IMAGE_MONGO=mongo:latest
 VERSION_IMAGE_GITLAB_CE=gitlab/gitlab-ce:latest
