--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@ CHATROOM_ROCKETCHAT_HUBOT=receptionyooma
 # L'utilisateur initial, n'est plus l'utiliateur RocketChat que HUBOT utilise: il créée l'utilisateur utilisé par HUBOT
 USERNAME_UTILISATEUR_ADMIN_INITIAL=jb
 MDP_UTILISATEUR_ADMIN_INITIAL=jbl
-EMAIL_UTILISATEUR_ADMIN_INITIAL=jbl@jbl.io
+# EMAIL_UTILISATEUR_ADMIN_INITIAL=jbl@jbl.io
+UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL=jbl@kytes.io
 NUMERO_PORT_ECOUTE_REVERSE_PROXY=8090
 NOM_CONTENEUR_ROCKETCHAT=rocketchat
 NOM_CONTENEUR_GITLAB=marguerite_gitlab_service
