--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -115,6 +115,9 @@ services:
         - UTILISATEUR_ROCKETCHAT_HUBOT="$UTILISATEUR_ROCKETCHAT_HUBOT"
         - UTILISATEUR_ROCKETCHAT_HUBOT_MDP="$UTILISATEUR_ROCKETCHAT_HUBOT_MDP"
         - CHATROOM_ROCKETCHAT_HUBOT="$CHATROOM_ROCKETCHAT_HUBOT"
+        - ADMIN_USERNAME="$USERNAME_UTILISATEUR_ADMIN_INITIAL" 
+        - ADMIN_PASS="$MDP_UTILISATEUR_ADMIN_INITIAL" 
+        - ADMIN_EMAIL="$UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL" 
 #     hostname: 'rocketchat'
 
     volumes:
