--- a/hubot-init-rocketcha/construction/Dockerfile
+++ b/hubot-init-rocketcha/construction/Dockerfile
@@ -1,24 +1,28 @@
 FROM centos:7
 
 # + le user RocketChat Admin, qui sera utilisé pour créer le user "$UTILISATEUR_ROCKETCHAT_HUBOT" et "$CHATROOM_ROCKETCHAT_HUBOT"
-ARG USERNAME_UTILISATEUR_ADMIN_INITIAL=$USERNAME_UTILISATEUR_ADMIN_INITIAL
-ENV USERNAME_UTILISATEUR_ADMIN_INITIAL=$USERNAME_UTILISATEUR_ADMIN_INITIAL
+ARG USERNAME_UTILISATEUR_ADMIN_INITIAL=$ADMIN_USERNAME
+ENV USERNAME_UTILISATEUR_ADMIN_INITIAL=$ADMIN_PASS
 
 ARG MDP_UTILISATEUR_ADMIN_INITIAL=$MDP_UTILISATEUR_ADMIN_INITIAL
 ENV MDP_UTILISATEUR_ADMIN_INITIAL=$MDP_UTILISATEUR_ADMIN_INITIAL
 
+ARG UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL=$ADMIN_EMAIL
+ENV UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL=$ADMIN_EMAIL
+
+ADMIN_EMAIL
 # + le user RocketChat, qui sera utilisé pa rle HUBOT, pour s'exprimer sur RocketChat, dans la chatroom "$CHATROOM_ROCKETCHAT_HUBOT"
 ARG UTILISATEUR_ROCKETCHAT_HUBOT=jbl
 ENV UTILISATEUR_ROCKETCHAT_HUBOT=jbl
 
 ARG UTILISATEUR_ROCKETCHAT_HUBOT_MDP=jbl
-ENV UTILISATEUR_ROCKETCHAT_HUBOT_MDP=jbl
+ENV UTILISATEUR_ROCKETCHAT_HUBOT_MDP=$UTILISATEUR_ROCKETCHAT_HUBOT_MDP
 
 ARG UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL=jbl@jbl.io
 ENV UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL=$UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL
 
 ARG CHATROOM_ROCKETCHAT_HUBOT=receptionyooma
-ENV CHATROOM_ROCKETCHAT_HUBOT=receptionyooma
+ENV CHATROOM_ROCKETCHAT_HUBOT=$CHATROOM_ROCKETCHAT_HUBOT
 
 ARG NOM_DOMAINE_DOCKER_ROCKETCHAT=rocketchat
 ENV NOM_DOMAINE_DOCKER_ROCKETCHAT=$NOM_DOMAINE_DOCKER_ROCKETCHAT
@@ -26,12 +30,6 @@ ENV NOM_DOMAINE_DOCKER_ROCKETCHAT=$NOM_DOMAINE_DOCKER_ROCKETCHAT
 # - Comme toutes les applications développées avec le framwork Meteor, par défaut, le port d'écoute est le port 3000.
 ARG NUMERO_PORT_ECOUTE_ROCKETCHAT=3000
 ENV NUMERO_PORT_ECOUTE_ROCKETCHAT=$NUMERO_PORT_ECOUTE_ROCKETCHAT
-
-
-
-
-
-
 
 
 
