--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,14 +16,14 @@ services:
       - "8081:8081"
       - "4443:443"
       - "2222:222"
-    expose:
-      - "3000"
-      - "8081"
-      - "4443"
-      - "2222"
-      - "80"
-      - "222"
-      - "443"
+#     expose:
+#       - "3000"
+#       - "8081"
+#       - "4443"
+#       - "2222"
+#       - "80"
+#       - "222"
+#       - "443"
     volumes:
       - ./gitlab/config:/etc/gitlab
       - ./gitlab/logs:/var/log/gitlab
@@ -47,8 +47,8 @@ services:
       - GITLAB_HOST=marguerite_gitlab:8081
     ports:
       - "8000:8000"
-    expose:
-      - "8000"
+#     expose:
+#       - "8000"
     networks:
       - devops
 #       devops:
