--- a/hubot-init-rocketcha/construction/Dockerfile
+++ b/hubot-init-rocketcha/construction/Dockerfile
@@ -20,6 +20,9 @@ ENV UTILISATEUR_ROCKETCHAT_HUBOT_MDP=$UTILISATEUR_ROCKETCHAT_HUBOT_MDP
 ARG UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL=jbl@jbl.io
 ENV UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL=$UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL
 
+ARG NOM_DU_ROBOT_HUBOT_ROCKETCHAT=nonocadeaudulysse
+ENV NOM_DU_ROBOT_HUBOT_ROCKETCHAT=$NOM_DU_ROBOT_HUBOT_ROCKETCHAT
+
 ARG CHATROOM_ROCKETCHAT_HUBOT=receptionyooma
 ENV CHATROOM_ROCKETCHAT_HUBOT=$CHATROOM_ROCKETCHAT_HUBOT
 
