--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+# + cf. "Riptide"
+NOM_DU_ROBOT_HUBOT_ROCKETCHAT=bozinsky
 UTILISATEUR_ROCKETCHAT_HUBOT=jbljbljbl
 UTILISATEUR_ROCKETCHAT_HUBOT_MDP=okokok
 CHATROOM_ROCKETCHAT_HUBOT=receptionyooma
