--- a/rocketchat/construction/Dockerfile
+++ b/rocketchat/construction/Dockerfile
@@ -33,5 +33,6 @@ ADD ./healthcheck .
 
 # toutes les 5 minutes, le daemon DOcker invoquera le HEALTHCHECK, pour actualiser le statutu du conteneur
 # HEALTHCHECK --interval=5s --timeout=3s   CMD curl -f http://localhost:3000/ || exit 1
-HEALTHCHECK --interval=4s --timeout=3s --retries=150 CMD ./avail-to-hubot-healthcheck && ./healthcheck
+# exactement les même paramètres de hEALTHCHECK, entre mongo et rocketchat
+HEALTHCHECK --interval=6s --timeout=5s --retries=150 CMD ./avail-to-hubot-healthcheck && ./healthcheck
 # pour tout le reste, on hérite et conserve tout de RocketChat
